Added a few minor changes to CurrencyScheduler and CurrencyService